# sherlock

./: .env.example  .gitignore  DEPLOYMENT.md  HANDOFF.md  README.md  WAKE_UP_NOTES.md  docker-compose.yml  pyproject.toml  repos.yml
apps/api/: audit.py  demo.py  env_context.py  main.py  router.py  settings.py  sse.py  store.py  verify.py
apps/api/agents/: code_exec.py  discovery.py  rca.py  scratch.py
apps/api/proactive/: briefing.py  probes.py  scheduler.py
apps/api/prompts/: discovery_system.md  rca_system.md  router_system.md
apps/api/trace/: log_fetcher.py  mermaid.py  pipeline.py  runner.py  stitcher.py
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/: AuditTrail.jsx  BriefingsPane.jsx  ChatStream.jsx  ConfidenceBadge.jsx  EnvSwitcher.jsx  EvidenceCard.jsx  HistorySidebar.jsx  MermaidBlock.jsx  RcaReport.jsx  SystemSwitcher.jsx  ThinkingIndicator.jsx  ToolCallStatus.jsx  TracePane.jsx
apps/web/src/lib/: api.js  sse.js
indexer/: branches.py  chunk.py  crawl.py  db.py  embed.py  parse.py  parse_code.py  run.py  secret_scan.py
mcp_servers/sherlock_rag/: server.py
mcp_servers/trk_cosmos/: server.py
mcp_servers/trk_datadog/: server.py
mcp_servers/trk_kubectl/: server.py
mcp_servers/trk_mssql/: server.py  templates.py
mcp_servers/trk_postgres/: server.py  templates.py  uuids.py
mcp_servers/trk_redis/: server.py
scripts/: clone_corpus.sh  inspect-corpus.sql  preflight.py  prepare_repos.py  smoke.sh  start_dev.sh  start_tunnel.sh
tests/: conftest.py  test_audit.py  test_branches.py  test_demo.py  test_indexer_chunk.py  test_indexer_crawl.py  test_indexer_parse.py  test_indexer_parse_code.py  test_indexer_secret_scan.py  test_indexer_system.py  test_mcp_kubectl.py  test_mcp_servers.py  test_proactive.py  test_rca_agent_smoke.py  test_rca_synthesis.py  test_router.py  test_scratch.py  test_store_cleanup.py  test_trace.py  test_trk_postgres.py  test_verify.py
tests/live/: test_live_integrations.py
tests/regression/: test_cpc576.py
(+1 files in other folders)
