[project]
name = "sherlock"
version = "0.1.0"
description = "AI-powered RCA + API discovery for the Trackonomy IoT platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",

    # LLM + agent runtime
    # Note: we use the raw `anthropic` SDK directly rather than the separate
    # claude-agent-sdk because Sherlock's filesystem-as-context loop wants
    # explicit control over the tool-use cycle (max-call cap, scratch-dir
    # writes, Opus escalation, sub-agent dispatch).
    "anthropic>=0.42.0",
    "openai>=1.55.0",
    "mcp>=1.1.0",

    # Indexer / RAG
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "tree-sitter>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "tiktoken>=0.8.0",
    "markdown-it-py>=3.0.0",
    "detect-secrets>=1.5.0",

    # Tool layer
    "azure-cosmos>=4.7.0",
    "redis>=5.2.0",
    "certifi>=2024.7.4",  # CA bundle for Redis TLS on macOS
    "pyyaml>=6.0.2",      # repos.yml parser
    "kubernetes>=31.0.0",
    "datadog-api-client>=2.31.0",
    "httpx>=0.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length is enforced by formatter, not linter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: requires real LLM/API calls (skip in fast runs)",
    "regression: end-to-end agent regression cases",
    "live: requires real PPE infrastructure access",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "indexer", "mcp_servers"]
